2002-11-21  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl.el: Various minor fixes: added erl-group-leader
	function (if the variable is nil in a non-process buffer, it takes
	the default), improved erl-pid-to-string, rearranged some things.

	* elisp/erl-service.el (erl-send-rpc): Using a new
	erl-group-leader function instead of the variable of the same
	name, to fix a problem when sending RPCs from non-process buffers.

	* elisp/edb.el (edb-monitor-format): Avoiding trailing spaces in
	summary lines, so that it doesn't unnecessarily wrap lines on < 80
	column displays (was needed for the big font I used in the EUC
	presentation.)

	* elisp/distel-ie.el: Added a couple of `push-mark' calls, so that
	after you evaluate a definition the mark will be placed where the
	cursor is (and thus when you type a new expression, the region
	will be around your new text, ready for M-x). But what we really
	need to do is change M-x so that it grabs a whole expression
	instead of using the region.

2002-11-12  Luke Gorrie  <luke@bluetail.com>

	* elisp/derl.el (erl-connect): Now printing an error if we try to
	connect to an erlang node that has the same nodename as Emacs, to
	prevent a commonly confusing problem.

2002-11-10  Luke Gorrie  <luke@bluetail.com>

	* Release: 3.1!

2002-11-08  Luke Gorrie  <luke@bluetail.com>

	* Everywhere: Incompatible changes to the pattern syntax. All
	symbols are now variables by default, to match a symbol by value
	it has to be quoted. The basic difference is:
	  [ok Value]
	becomes:
	  ['ok value]
	The algorithm for updating your patterns is:
	  Put a quote in front of all lower-case match-by-value symbols.
	  Change all the symbols for variables to lower-case.
	And that's all. Hopefully I've correctly fixed this in all the
	code included in Distel.
	
	* elisp/erl-service.el (fprof-analyse): Added new command to view
	an existing fprof analysis file.

2002-11-05  Luke Gorrie  <luke@bluetail.com>
